# flask-react-postgres-boilerplate

./: .dockerignore  .replit  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  dump.rdb  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json
.upm/: store.json
backend/: __init__.py  app.py  auth.py  celery_worker.py  config.py  extensions.py  models.py  tasks.py
backend/api/: routes.py
backend/auth/: models.py  request_models.py  routes.py
backend/celery/: celery_worker.py
backend/config/: base.py  development.py  environment.py  production.py  testing.py
backend/database/: db_model.py
backend/extensions/: extensions.py
backend/tasks/: cleanup_inactive_users.py  compute_user_stats.py  test_redis_celery.py
backend/tests/: conftest.py  test_api.py  test_auth.py
backend/types/: get_request.py  modification.py
backend/util/: logged_in_user.py  pagination.py
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Layout.tsx  Navbar.tsx
frontend/src/core/auth/pages/: Login.tsx  Register.tsx
frontend/src/core/users/components/: StatsCard.tsx  UserCard.tsx
frontend/src/core/users/pages/: Home.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
