[project]
name = "repl-nix-flask-postgres-celery-boilerplate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "celery>=5.4.0",
    "flask-migrate>=4.0.7",
    "flask-cors>=5.0.0",
    "flask-jwt-extended>=4.7.1",
    "redis>=5.2.1",
]
